<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/produto_id">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbar"
        android:theme="@style/AppThemeWhite">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="#fff"
            app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded.Shadow"
            app:title="Nome do produto"
            app:expandedTitleMarginStart="20dp"
            android:background="@color/gray">

            <ImageView
                android:id="@+id/produto_foto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:background="@drawable/form_background"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            //Valor
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                    android:id="@+id/produto_valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00,00"
                    android:textFontWeight="600"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=" (Kg)"
                    android:textFontWeight="600"
                    android:textSize="16sp" />
            </LinearLayout>

            //Descricao
            <TextView
                android:id="@+id/produto_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descrição do Produto"
                android:layout_margin="20dp"
                android:textFontWeight="600"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

            //Vendedor
            <LinearLayout
                android:id="@+id/produto_vendedor_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Veja o perfil de "
                    android:textFontWeight="600"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/produto_vendedor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nome Vendedor"
                    android:textFontWeight="600"
                    android:textSize="16sp" />

            </LinearLayout>

            //Categoria
            <TextView
                android:id="@+id/produto_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categoria"
                android:layout_margin="10dp"
                android:textFontWeight="600"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/produto_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_circle"
                android:elevation="2dp"
                android:paddingHorizontal="40dp"
                android:text="ENTRAR EM CONTATO"
                android:textColor="#fff"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>