<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_conversa_whatsapp"
        android:title="Adicionar Contato"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_whatsapp_green"/>

    <item android:id="@+id/menu_conversa_contato"
        android:title="Adicionar Contato"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_person_add_green"/>


</menu>