<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.MainActivity"
android:orientation="vertical"
    android:id="@+id/main_id">

<include android:id="@+id/toolbar"
    layout="@layout/toolbar_main_white"></include>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:elevation="2dp">
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categoria:"
        android:textSize="16dp"
        android:textColor="#000"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/categorias_spinner"
        android:layout_marginLeft="5dp"></Spinner>
</LinearLayout>


<androidx.viewpager.widget.ViewPager
    android:id="@+id/vp_main"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:background="@color/gray">
</androidx.viewpager.widget.ViewPager>

<br.edu.ifro.agroplace.helper.SlidingTabLayout
    android:id="@+id/main_stl_tabs"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@android:color/white">
</br.edu.ifro.agroplace.helper.SlidingTabLayout>

</LinearLayout>